fix spacing

--- a/squash/public/assets/styles.css
+++ b/squash/public/assets/styles.css
@@ -364,6 +364,7 @@ ul.group_subscribers .hidden {
 }
 .group-list .group .groupname {
   font-size: 1.5em;
+  line-height: 1.5em;
 }
 
 
